ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Communication__c/fields/Adjective__c.field-meta.xml
<CustomField>
    <fullName>Adjective__c</fullName>
    <label>Adjective</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dry</fullName>
            </value>
            <value>
                <fullName>Dusty</fullName>
            </value>
            <value>
                <fullName>Freezing</fullName>
            </value>
            <value>
                <fullName>Gaseous</fullName>
            </value>
            <value>
                <fullName>Cosmic</fullName>
            </value>
            <value>
                <fullName>Moist</fullName>
            </value>
            <value>
                <fullName>Stinky</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>