ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Communication__c/fields/noun__c.field-meta.xml
<CustomField>
    <fullName>noun__c</fullName>
    <label>noun</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alien</fullName>
            </value>
            <value>
                <fullName>Asteroid</fullName>
            </value>
            <value>
                <fullName>Astronaut</fullName>
            </value>
            <value>
                <fullName>Banana</fullName>
            </value>
            <value>
                <fullName>Pineapple-upside-down cake</fullName>
            </value>
            <value>
                <fullName>Spacecraft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>