ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Communication__c/fields/Proper_noun__c.field-meta.xml
<CustomField>
    <fullName>Proper_noun__c</fullName>
    <label>Proper  noun</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adam Seligman</fullName>
            </value>
            <value>
                <fullName>Astro</fullName>
            </value>
            <value>
                <fullName>Charlie isaacs</fullName>
            </value>
            <value>
                <fullName>Cloudy</fullName>
            </value>
            <value>
                <fullName>Codey</fullName>
            </value>
            <value>
                <fullName>Earnie</fullName>
            </value>
            <value>
                <fullName>Hootie McOwlface</fullName>
            </value>
            <value>
                <fullName>Jeff Douglas</fullName>
            </value>
            <value>
                <fullName>Sarah Franklin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>