ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Communication__c/fields/Verb__c.field-meta.xml
<CustomField>
    <fullName>Verb__c</fullName>
    <label>Verb</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doing the robot (literally)</fullName>
            </value>
            <value>
                <fullName>Moonwalking</fullName>
            </value>
            <value>
                <fullName>Red-dirt rolling</fullName>
            </value>
            <value>
                <fullName>Shimmy-Shammying</fullName>
            </value>
            <value>
                <fullName>Two-Stepping</fullName>
            </value>
            <value>
                <fullName>Whirling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>